--- a/pathways/images/templates/imageView.html
+++ b/pathways/images/templates/imageView.html
@@ -5,6 +5,7 @@
 
 <head>
     <title>explore</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/allStyles.css' %}">
 </head>
 <body>
     <div class="caption-container">
@@ -35,67 +36,3 @@
 </body>
 </html>
 
-<style>
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        margin: .5cm;
-    }
-    
-    body{
-        background-color: rgb(0, 0, 0);
-    }
-
-    h3{
-        color: #ffffff;
-        font-family:'Times New Roman', Times, serif;
-        text-align: center;
-    }
-
-    img {
-        max-width: 60%;
-        height: auto;
-    }
-
-    .caption-container {
-        visibility: hidden;
-        display: block;
-    }
-    .top-button-container {
-        display: flex;
-        justify-content: center;
-        margin-bottom: .25cm;
-    }
-
-    .bottom-button-container {
-        display: flex;
-        justify-content: center;
-        margin-top: .25cm;
-    }
-
-    .left-button-container {
-        display: flex;
-        justify-content: center;
-        margin-right: 100px;
-    }
-
-    .right-button-container {
-        display: flex;
-        justify-content: center;
-        margin-left: 100px;
-    }
-    
-    .button {
-        margin: 0 10px;
-        padding: 10px;
-        background-color: #000000;
-        color: rgb(255, 255, 255);
-        border: none;
-        border-radius: 5px;
-        font-size: 32px;
-        min-width: 1.5cm;
-        min-height: 1.5cm;
-    }
-</style>
