--- a/pathways/images/static/css/allStyles.css
+++ b/pathways/images/static/css/allStyles.css
@@ -16,6 +16,8 @@ h3{
     text-align: center;
 }
 
+
+
 img {
     max-width: 60%;
     height: auto;
@@ -50,13 +52,19 @@ img {
 }
 
 .button {
+    text-decoration: none;
     margin: 0 10px;
     padding: 10px;
     background-color: #000000;
     color: rgb(255, 255, 255);
     border: none;
     border-radius: 5px;
-    font-size: 32px;
+    font-size: 40px;
     min-width: 1.5cm;
     min-height: 1.5cm;
+}
+
+.button:hover{
+color: rgb(255, 127, 127);
+
 }
