--- a/pathways/images/templates/imageView.html
+++ b/pathways/images/templates/imageView.html
@@ -1,4 +1,5 @@
 
+
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -8,28 +9,26 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/allStyles.css' %}">
 </head>
 <body>
-    <div class="caption-container">
-        <h3>&nbsp;- {{image.name}} - &nbsp;</h3>
-        </div>
+
     <div class="container">
             
             <div class="top-button-container">
-            <button class="button">&uarr;</button>
+                <a href="{{image.up.id}}/"class="button">&uarr;</a>
             </div>
             <div class="container">
                 <div class="left-button-container">
-                    <button class="button">&larr;</button>
+                    <a href="{{image.left.id}}/"class="button">&larr;</a>
                     </div>
             <img src="{{image.image.url}}" alt="Image">
             <div class="right-button-container">
-                <button class="button">&rarr;</button>
+                <a href="{{image.right.id}}/"class="button">&rarr;</a>
                 </div>
             </div>
             
                 
             
             <div class="bottom-button-container">
-                <button class="button">&darr;</button>
+                <a href="{{image.down.id}}/"class="button">&darr;</a>
                 </div>
         </div>
             
