--- a/pathways/images/static/css/allStyles.css
+++ b/pathways/images/static/css/allStyles.css
@@ -23,6 +23,9 @@ img {
     height: auto;
 }
 
+
+
+
 .caption-container {
     visibility: hidden;
     display: block;
@@ -51,7 +54,7 @@ img {
     margin-left: 100px;
 }
 
-.button {
+.arrowButton {
     text-decoration: none;
     margin: 0 10px;
     padding: 10px;
@@ -64,7 +67,87 @@ img {
     min-height: 1.5cm;
 }
 
-.button:hover{
+.arrowButton:hover{
 color: rgb(255, 127, 127);
 
+}
+
+.onRight {
+    animation: onRight .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
+}
+    @keyframes onRight {
+        0% {
+            opacity: 1;
+            transform: translateX(0%);
+        }
+        100% {
+            opacity: -.5;
+            transform: translateX(-100%);
+        }
+}
+
+.onLeft {
+    animation: onLeft .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
+}
+    @keyframes onLeft {
+        0% {
+            opacity: 1;
+            transform: translateX(0%);
+        }
+        100% {
+            opacity: -.5;
+            transform: translateX(100%);
+        }
+}
+
+.onUp {
+    animation: onUp .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
+}
+    @keyframes onUp {
+        0% {
+            opacity: 1;
+            transform: translateY(0%);
+        }
+        100% {
+            opacity: -.5;
+            transform: translateY(100%);
+        }
+}
+
+.onDown {
+    animation: onDown .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
+}
+    @keyframes onDown {
+        0% {
+            opacity: 1;
+            transform: translateY(0%);
+        }
+        100% {
+            opacity: -.5;
+            transform: translateY(-100%);
+        }
+}
+
+.fadeOut {
+    animation: fadeOut .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
+}
+    @keyframes fadeOut {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+        }
+}
+
+.fadeIn {
+    animation: fadeIn .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
+}
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
 }
