--- a/pathways/images/templates/imageView.html
+++ b/pathways/images/templates/imageView.html
@@ -6,8 +6,8 @@
 
 <head>
     <title>explore</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/allStyles.css' %}">
-    <script src="{% static 'js/main.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/imagesStyles.css' %}">
+    <script src="{% static 'js/images.js' %}"></script>
 </head>
 <body>
     
