--- a/pathways/images/templates/pathView.html
+++ b/pathways/images/templates/pathView.html
@@ -3,8 +3,10 @@
 <script src="{% static 'js/paths.js' %}"></script>
 
 <body>
-    <div class="main"> 
+<!-- ! main section start ! -->
+<div class="main"> 
 
+    <!-- ! pathways ! -->
     <div class="container">
 
     {% for path in pathways %}
@@ -16,14 +18,10 @@
     {% endfor %}
     </div>
 
-    <!-- !page split! -->
+    <!-- ! title ! -->
 
-    <div class="title" id="title"> 
-
-        Path Title
-
-    </div>
-
+    <div class="title" id="title"> </div>
+<!-- ! navigation ! -->
 </div>
 
 </body>
