removed img-container

--- a/pathways/images/templates/imageView.html
+++ b/pathways/images/templates/imageView.html
@@ -15,11 +15,11 @@
     <div class="page"> 
 
         <!-- ! image ! -->
-        <div  class="img-container">
         
-        <img onclick="focus()" class="img" id="img" src="{{image.image.url}}" alt="Image">
         
-        </div>
+        <img class="img" id="img" src="{{image.image.url}}" alt="Image">
+        
+        
         
         <!-- ! navigation ! -->
 
