--- a/pathways/images/static/css/pathwayStyles.css
+++ b/pathways/images/static/css/pathwayStyles.css
@@ -1,3 +1,5 @@
+
+
 .pathway-img{
     width: 35vw;
     height: 100%;
@@ -28,7 +30,7 @@
 }
 
 .container{
-    transform: translateX(-10vw);
+    transform: translateX(-15vw);
     width: 100vw;
     height: 100vh; 
     display: flex;
@@ -52,7 +54,8 @@ body{
 .title{
     position: fixed;
     color: #ffffff;
-    right: 15vw;
+    right: 10vw;
+    text-align: center;
     top: 50vh;
     font-size: 3em;
     opacity: 0;
